[gd_scene load_steps=2 format=3 uid="uid://b7ebcew0fme12"]

[ext_resource type="Script" path="res://Scripts/UI/slime_amount_selector.gd" id="1_bel6o"]

[node name="SlimeAmountSelector" type="VBoxContainer"]
size_flags_horizontal = 4
theme_override_constants/separation = -10
script = ExtResource("1_bel6o")

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Slimes per Round"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="MinusButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="SlimeCountLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "3"

[node name="AddButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "+"

[connection signal="pressed" from="HBoxContainer/MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
